--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 </head>
 <body>
   
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div id="content">
+          <h1>Purrfect Match</h1>
+          <h3>Matching You With A Feline</h3>
+          <hr>
+          <button class="btn btn-outline-secondary btn-lg">Get Started!</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
