changed hr, added slogan font shadow, added icons to navbar and container get started button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Purrfect Match</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
@@ -28,8 +29,8 @@
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li nav-item><a class="nav-link" href="#">Sign Up</a></li>
-          <li nav-item><a class="nav-link" href="#">Login</a></li>
+          <li nav-item><a class="nav-link" href="#"><i class="fas fa-user-plus"></i> Sign Up</a></li>
+          <li nav-item><a class="nav-link" href="#"><i class="fas fa-user"></i> Login</a></li>
         </ul>
       </div>
     </div>
@@ -42,7 +43,7 @@
           <h1>Purrfect Match</h1>
           <h3>Matching You With A Feline</h3>
           <hr>
-          <button class="btn btn-outline-secondary btn-lg">Get Started!</button>
+          <button class="btn btn-outline-secondary btn-lg"><i class="fas fa-paw"></i> Get Started!</button>
         </div>
       </div>
     </div>
